# unic-locale

./: .gitignore  .travis.yml  CONTRIBUTORS.md  Cargo.toml  README.md  temp.diff
tinystr/: Cargo.toml
tinystr/benches/: string.rs  tinystr4.rs  tinystr8.rs
tinystr/src/: tinystr4.rs  tinystr8.rs
tinystr/tests/: main.rs
unic-langid/: CHANGELOG.md  Cargo.toml  README.md
unic-langid-impl/: CHANGELOG.md  Cargo.toml  README.md
unic-langid-impl/benches/: add_likely_subtags.rs  canonicalize.rs  langid.rs  parser.rs
unic-langid-impl/data/cldr-misc-full/: bower.json  package.json
unic-langid-impl/data/cldr-misc-full/main/af/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/af-NA/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/agq/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ak/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/am/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-AE/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-BH/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-DJ/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-DZ/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-EG/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-EH/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-ER/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-IL/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-IQ/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-JO/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-KM/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-KW/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-LB/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-LY/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-MA/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-MR/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-OM/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-PS/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-QA/: characters.json  delimiters.json  layout.json  listPatterns.json  posix.json
unic-langid-impl/data/cldr-misc-full/main/ar-SA/: characters.json  delimiters.json  posix.json  (+2 more)
unic-langid-impl/src/: errors.rs  layout_table.rs  lib.rs  serde.rs  subtags.rs
unic-langid-impl/src/data/: generate.rs  mod.rs
unic-langid-impl/src/data/cldr/: mod.rs
unic-langid-impl/src/data/inline/: generate.rs  layout_table.rs  mod.rs  version.rs
unic-langid-impl/src/likelysubtags/: mod.rs  tables.rs
unic-langid-impl/src/parser/: errors.rs  mod.rs
unic-langid-impl/src/subtags/: variant.rs
unic-langid-impl/src/validity/: mod.rs
unic-langid-impl/tests/: canonicalize_test.rs  fixtures.rs  language_identifier_test.rs  layout_data.rs  likelysubtags.rs
unic-langid-impl/tests/fixtures/: parsing.json
unic-langid-likelysubtags/: Cargo.toml
unic-langid-likelysubtags/benches/: add_likely_subtags.rs
unic-langid-likelysubtags/src/: lib.rs  tables.rs
unic-langid-likelysubtags/tests/: basic.rs
unic-langid-macros/: Cargo.toml
unic-langid-macros-impl/: Cargo.toml
unic-langid-macros-impl/src/: lib.rs  procs.rs
unic-langid-macros/examples/: langid-macro.rs
unic-langid-macros/src/: lib.rs
unic-langid/benches/: canonicalize.rs  langid.rs  parser.rs
unic-langid/examples/: simple-langid.rs
unic-langid/src/: lib.rs  subtags.rs
unic-langid/src/parser/: mod.rs
unic-langid/tests/: canonicalize_test.rs  fixtures.rs  langid.rs  language_identifier_test.rs
unic-locale/: CHANGELOG.md  Cargo.toml  README.md
unic-locale-impl/: Cargo.toml  README.md
unic-locale-impl/benches/: canonicalize.rs  locale.rs  parser.rs
unic-locale-impl/src/: errors.rs  extensions.rs  lib.rs
unic-locale-impl/src/extensions/: mod.rs  private.rs  transform.rs  unicode.rs
unic-locale-impl/src/parser/: errors.rs  mod.rs
unic-locale-impl/tests/: canonicalize_test.rs  fixtures.rs  locale_test.rs
unic-locale-impl/tests/fixtures/: parsing.json  serialize.json
unic-locale-macros/: Cargo.toml  README.md
unic-locale-macros-impl/: Cargo.toml  README.md
unic-locale-macros-impl/src/: lib.rs  procs.rs
unic-locale-macros/examples/: locale-macro.rs
unic-locale-macros/src/: lib.rs
unic-locale/benches/: canonicalize.rs  parser.rs
unic-locale/examples/: simple-locale.rs
unic-locale/src/: errors.rs  extensions.rs  lib.rs
unic-locale/src/locale/: mod.rs
unic-locale/src/parser/: errors.rs  mod.rs
unic-locale/tests/: canonicalize_test.rs  fixtures.rs  locale.rs  locale_test.rs
(+2834 files in other folders)
