[workspace]
resolver = "2"
members = [
  "unic-langid",
  "unic-langid-impl",
  "unic-langid-macros",
  "unic-langid-macros-impl",
  "unic-locale",
  "unic-locale-impl",
  "unic-locale-macros",
  "unic-locale-macros-impl",
]

[workspace.package]
version = "0.9.6"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2021"
repository = "https://github.com/zbraniecki/unic-locale"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "tests/*.rs",
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
]

[workspace.dependencies]
unic-langid-impl = { version = "0.9.6", path = "unic-langid-impl" }
unic-langid = { version = "0.9.6", path = "unic-langid" }
unic-langid-macros-impl = { version = "0.9.6", path = "unic-langid-macros-impl" }
unic-langid-macros = { version = "0.9.6", path = "unic-langid-macros" }
unic-locale-impl = { version = "0.9.6", path = "unic-locale-impl" }
unic-locale = { version = "0.9.6", path = "unic-locle" }
unic-locale-macros-impl = { version = "0.9.6", path = "unic-locale-macros-impl" }
unic-locale-macros = { version = "0.9.6", path = "unic-locale-macros" }
