[package]
name = "unic-langid-impl"
description = "API for managing Unicode Language Identifiers"
version = "0.5.2"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
exclude = ["data/*"]

[dependencies]
tinystr = "0.3"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
likelysubtags = []
binary = ["serde", "serde_json"]

[[bin]]
name = "generate_likelysubtags"
required-features = ["binary"]

[[bin]]
name = "generate_layout"
required-features = ["binary"]

[[test]]
name = "likelysubtags"
path = "tests/likelysubtags.rs"
required-features = ["likelysubtags"]

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "langid"
harness = false

[[bench]]
name = "canonicalize"
harness = false

[[bench]]
name = "add_likely_subtags"
harness = false
required-features = ["likelysubtags"]
