[package]
name = "unic-langid-impl"
description = "API for managing Unicode Language Identifiers"
version = "0.7.1"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
exclude = ["data/*"]

[dependencies]
tinystr = "0.3.2"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde-tuple-vec-map = {version = "0.2.1", optional = true }

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
json = ["serde", "serde_json", "serde-tuple-vec-map"]

likelysubtags-cldr = ["json", "serde/derive"]
likelysubtags-inline = []

layout-cldr = ["json"]
layout-inline = []

default = []

inline = ["likelysubtags-inline", "layout-inline"]
cldr = ["likelysubtags-cldr", "layout-cldr"]

binary = ["json"]

[[bin]]
name = "generate_inline_data"
required-features = ["binary"]

[[test]]
name = "likelysubtags"
path = "tests/likelysubtags.rs"

[[test]]
name = "layout_data"
path = "tests/layout_data.rs"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "langid"
harness = false

[[bench]]
name = "canonicalize"
harness = false

[[bench]]
name = "add_likely_subtags"
harness = false
