[package]
name = "unic-langid-likelysubtags"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
tinystr = "0.3"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
binary = ["serde", "serde_json"]

[[bin]]
name = "generate"
required-features = ["binary"]

[[bench]]
name = "add_likely_subtags"
harness = false
