[package]
name = "unic-langid-macros-impl"
description = "API for managing Unicode Language Identifiers"
version = "0.9.1"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md"
]

[lib]
proc_macro = true

[dependencies]
unic-langid-impl = { version = "0.9", path = "../unic-langid-impl" }
syn = { version = "2.0", default-features = false, features = ["parsing", "proc-macro"] }
quote = "1.0"
proc-macro-hack = "0.5"
