[package]
name = "unic-langid-macros"
description = "API for managing Unicode Language Identifiers"
version = "0.6.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]

[dependencies]
proc-macro-hack = "0.5"
unic-langid-macros-impl = { path = "../unic-langid-macros-impl" }
unic-langid-impl = { path = "../unic-langid-impl" }
tinystr = { git = "https://github.com/zbraniecki/tinystr", branch = "u8" }
