[package]
name = "unic-langid-macros"
description = "API for managing Unicode Language Identifiers"
version = "0.9.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md"
]

[dependencies]
proc-macro-hack = "0.5"
unic-langid-macros-impl = { version = "0.9", path = "../unic-langid-macros-impl" }
unic-langid-impl = { version = "0.9", path = "../unic-langid-impl" }
tinystr = "0.3.2"
