[package]
name = "unic-langid-macros"
description = "API for managing Unicode Language Identifiers"
version = "0.9.2"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT OR Apache-2.0"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "tests/*.rs",
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md"
]

[dependencies]
unic-langid-macros-impl = { version = "0.9", path = "../unic-langid-macros-impl" }
unic-langid-impl = { version = "0.9", path = "../unic-langid-impl" }
tinystr = "0.7.0"
