[package]
name = "unic-langid"
description = "API for managing Unicode Language Identifiers"
version = "0.5.0"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]

[dependencies]
unic-langid-impl = { path = "../unic-langid-impl" }
unic-langid-macros = { path = "../unic-langid-macros", optional = true }

[dev-dependencies]
unic-langid-macros = { path = "../unic-langid-macros" }

[features]
default = []

# Provide macros.
macros = ["unic-langid-macros"]
