[package]
name = "unic-langid"
description = "API for managing Unicode Language Identifiers"
version = "0.6.1"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]

[dependencies]
unic-langid-impl = "0.6"
unic-langid-macros = { version = "0.6", optional = true }

[dev-dependencies]
unic-langid-macros = "0.6"

[features]
default = []

# Provide macros.
macros = ["unic-langid-macros"]
likelysubtags = ["unic-langid-impl/likelysubtags"]
