[package]
name = "unic-langid"
description = "API for managing Unicode Language Identifiers"
version = "0.9.3"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT OR Apache-2.0"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "tests/*.rs",
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md"
]

[dependencies]
unic-langid-impl = { version = "0.9", path = "../unic-langid-impl" }
unic-langid-macros = { version = "0.9", path = "../unic-langid-macros", optional = true }

[dev-dependencies]
unic-langid-macros = { version = "0.9", path = "../unic-langid-macros" }

[features]
default = []
serde = ["unic-langid-impl/serde"]

# Provide macros.
macros = ["unic-langid-macros"]
likelysubtags = ["unic-langid-impl/likelysubtags"]
