[package]
name = "unic-locale-impl"
description = "API for managing Unicode Locale Identifiers"
version = "0.9.0"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md"
]

[dependencies]
unic-langid-impl = { version = "0.9", path = "../unic-langid-impl" }
tinystr = "0.3.2"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "canonicalize"
harness = false

[features]
default = []
likelysubtags = ["unic-langid-impl/likelysubtags"]
