[package]
name = "unic-locale-impl"
description = "API for managing Unicode Locale Identifiers"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
unic-langid-impl = { workspace = true }
tinystr = "0.8.0"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "canonicalize"
harness = false

[features]
default = []
likelysubtags = ["unic-langid-impl/likelysubtags"]
