[package]
name = "unic-locale-macros-impl"
description = "API for managing Unicode Locale Identifiers"
version = "0.5.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]

[lib]
proc_macro = true

[dependencies]
unic-locale-impl = { path = "../unic-locale-impl" }
syn = "1.0"
quote = "1.0"
proc-macro-hack = "0.5"
