[package]
name = "unic-locale-macros-impl"
description = "API for managing Unicode Locale Identifiers"
version = "0.9.3"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT OR Apache-2.0"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "tests/*.rs",
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md"
]

[lib]
proc_macro = true

[dependencies]
unic-locale-impl = { version = "0.9", path = "../unic-locale-impl" }
syn = { version = "2.0", default-features = false, features = ["parsing", "proc-macro"] }
quote = "1.0"
proc-macro-hack = "0.5"
