[package]
name = "unic-locale-macros"
description = "API for managing Unicode Locale Identifiers"
version = "0.7.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT/Apache-2.0"
categories = ["internationalization"]

[dependencies]
proc-macro-hack = "0.5"
tinystr = "0.3.2"
unic-locale-macros-impl = { version = "0.7", path = "../unic-locale-macros-impl" }
unic-locale-impl = { version = "0.7", path = "../unic-locale-impl" }
