[package]
name = "unic-locale-macros"
description = "API for managing Unicode Locale Identifiers"
version = "0.9.1"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Zibi Braniecki <gandalf@mozilla.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zbraniecki/unic-locale"
license = "MIT OR Apache-2.0"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "tests/*.rs",
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md"
]

[dependencies]
proc-macro-hack = "0.5"
tinystr = "0.7.0"
unic-locale-macros-impl = { version = "0.9", path = "../unic-locale-macros-impl" }
unic-locale-impl = { version = "0.9", path = "../unic-locale-impl" }
