[package]
name = "unic-locale-macros"
description = "API for managing Unicode Locale Identifiers"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
proc-macro-hack = "0.5"
tinystr = "0.8.0"
unic-locale-macros-impl = { workspace = true }
unic-locale-impl = { workspace = true }
