[package]
name = "unic-locale"
description = "API for managing Unicode Locale Identifiers"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
unic-langid-impl = { workspace = true }
unic-locale-impl = { workspace = true }
unic-locale-macros = { workspace = true, optional = true }

[dev-dependencies]
unic-locale-macros = { workspace = true }

[features]
default = []

# Provide macros.
macros = ["unic-locale-macros"]
likelysubtags = ["unic-locale-impl/likelysubtags"]
